# zigs-cakes-backend

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.tools  data.sql  docker-compose.yml
.github/workflows/: backend-deployment.yml  backend-testing.yml  ci.yml
.sqlx/: query-04e0fb488cb400e16de59d30f4cef0c458bc2b8bba512b19a6693ea5ddf65d5e.json  query-07d6220e42b681ab2649364fed067a3903c9b293cfa1030109f879eddae31a23.json  query-1fc703b1a9d3e1ad43c48a208483823ce923d51213925574d2e0409642560703.json  query-2566402202c1e4efb8ca7f9bd46d599ef5eba7dc0978548115c3839bcbb17d00.json  query-4707f43626ece07abeb53d07f0e9a3f4c2ddaf1d584e10194b6522f96cac6cb8.json  query-4ff678ad1ce89154e8d7334a3f45b916f2a907336f9d937ee789b3e7aad302e0.json  query-5e7c27f190a78651814eb730d006cf4f529066e3fdcd148469bd7d31a86f21ec.json  query-6220b2762bd792be05ad188c4d3871498cecb108e17c1951e589b4931c02f8e9.json  query-74c76a181c4ccdd55ce669be18c9debdd796369780c160f9a48d44158a10f507.json  query-7f548ce874caf911101fe7da67ef40480763f377c930cf6f5c524108f8b54f4a.json  query-a56eab0b1cab4ec22be31de14e0b2bd42e77d8a6c1b9d5067f05ad2f427b8e58.json  query-bf50945c516946eee470d2b6fd063056224f784f1b92781cb5de016fc84722ed.json  query-c280e162a0da8438479348ec3079f87c50116e22d070c85f01ad6ed87e047c6c.json  query-ecd6f435161d49162e45006141378ed320edd971fd765852a13f9e4f7575ac37.json  query-ecf344c50257470a15b80909610cfa2b82e96248515f7770b184db5e19149908.json  query-f0912df9ff106dcad0e385d89b6b2b0be60c3dc3ed5e999fe4c8cacd37205e59.json  query-f33df5a916deb1225401c95909250cdab15daf8f5841eda257c131da86bae6f5.json
e2e/: Cargo.toml
e2e/src/: main.rs
migrations/: 20250220064531_init_options.sql  20250220064655_insert_options.sql  20250220064823_init_cart.sql  20250220064917_init_cakes_orders.sql  20250220064954_init_users.sql  20250220065053_init_cart_items_and_toppings.sql  20250220065134_alter_cart.sql  20250225004340_enable_rls.sql  20250225004642_enable_rls_cart.sql  20250225005022_alter_cart.sql  20250312215619_user_roles.sql  20250316150345_alter_cake_flavor.sql  20250316152908_alter_cake_size.sql  20250316171459_alter_cart_to_uuid.sql  20250318203707_enable_rls_for_migrations.sql  20250318204012_create_auth_table_locally.sql  20250318204320_create_auth_function.sql  20250319165825_add_price_column_to_orders.sql  20250319171854_order_price_trigger_function.sql  20250326000941_add_cart_column_to_user.sql  20250326182439_add_user_id_to_cart.sql  20250407213530_add_default_to_cake_flavors.sql  20250407230744_update_cake_size.sql
server/: Cargo.toml
server-core/: Cargo.toml
server-core/benches/: cake_flavor.rs
server-core/src/: auth.rs  error.rs  lib.rs  middleware.rs  secrets.rs  state.rs
server-core/src/admin/: flavor.rs  mod.rs  size.rs
server-core/src/api/: mod.rs
server-core/src/api/v1/: mod.rs  orders.rs
server-core/src/api/v1/cart/: delete.rs  get.rs  mod.rs  post.rs
server-core/src/api/v2/: mod.rs  order.rs
server-core/src/api/v2/cart/: delete.rs  get.rs  post.rs
server-core/src/db/: mod.rs
server-core/src/middleware/: mod.rs
server-core/src/services/: mod.rs  size.rs
server-core/tests/: cart.rs  flavors.rs  order.rs  size.rs
server/src/: main.rs
sql/: create_test_user.sql
tools/: Cargo.toml
tools/src/: error.rs  main.rs
