[workspace]
resolver = '3'

members = ['server-core','server', "e2e"]

[workspace.dependencies]
tokio-postgres = "0.7.13"
axum = {version = "0.8.1", features = ["query","macros"]}
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = {version = "0.4.39",features = ["serde"]}
cookie = "0.18.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
serde = {version = "1.0.217",features = ["derive"]}
serde_json = "1.0.138"
serde_with = "3.12.0"
thiserror = "2.0.11"
time = "0.3.41"
tokio = {version = "1.43.0",features = ["full"]}
tower = {version = "0.5.2",features = ["limit"]}
tower-http = {version="0.6.2", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19",features = ["json","fmt","std","env-filter"]}
uuid = {version = "1.14.0",features = ["serde","v4"]}
criterion = { version = "0.5", features = ["html_reports","async_tokio"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid","chrono","macros","decimal"] } # Adjust for your framework
utoipa-swagger-ui = { version = "9.0.0", features = ["axum","reqwest","debug-embed"] }
zip = "=2.3.0" 
reqwest = "0.12.15"

[workspace.dependencies.sqlx]
version = "0.8.3"
features = [
	"runtime-tokio",
	"migrate",
	"macros",
	"postgres",
	"derive",
	"uuid",
	"chrono",
	"tls-native-tls",
	"rust_decimal"
]

[profile.dev.package.sqlx-macros]
opt-level = 3
