[package]
name = "server-core"
version = "0.7.1"
edition = "2024"

[[bench]]
name = "cake_flavor"
harness = false

[dependencies]
reqwest = {workspace = true}
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tokio-postgres.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
cookie.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true

[dev-dependencies]
criterion.workspace = true